# skalar

./: .dockerignore  Cargo.toml  Dockerfile  Readme.md  build.sh  docker-compose.yml  index.js  package-lock.json  package.json  publish.sh  readme.md  run.sh
.github/workflows/: build.yml
src/: app_state.rs  fetch.rs  main.rs  request_context.rs
